--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ body {
     color: var(--Grayish-Blue);
     position: absolute;
     bottom: 6px;
+    text-align: center;
 
     & a {
         color: var(--Pale-Blue);
