--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     --Dark-Blue: hsl(228, 56%, 26%);
     --Very-Dark-Blue: hsl(229, 57%, 11%);
 }
+
+/* Mobile Designe */
+
 * {
     margin: 0;
     padding: 0;
@@ -64,7 +67,6 @@ body {
 }
 .item2 {
     padding: 36px;
-    margin-bottom: 20px;
     color: var(--Pale-Blue);
     display: flex;
     flex-direction: column;
@@ -81,7 +83,7 @@ body {
     }
     & .load {
         width: 100%;
-        height: 20px;
+        height: 1.4rem;
         background-color: var(--Very-Dark-Blue);
         border-radius: 20px;
         padding: 2px;
@@ -117,30 +119,39 @@ body {
         }
     }
 }
-.item3 {
-    background-color: white;
-    width: auto;
-    padding: 12px 22px;
+.indicator-container {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
     position: absolute;
-    bottom: -30px;
+    bottom: -35px;
 
-    & span {
-        font-size: 36px;
-        font-weight: 700;
-        color: var(--Very-Dark-Blue);
-        margin-right: 5px;
+    & .item3 {
+        background-color: white;
+        width: auto;
+        padding: 12px 22px;
+        display: flex;
+        align-items: center;
+        
+    
+        & span {
+            font-size: 36px;
+            font-weight: 700;
+            color: var(--Very-Dark-Blue);
+            margin-right: 5px;
+        }
+        & p {
+            color: var(--Grayish-Blue);
+            font-weight: 700;
+        }
     }
-    & p {
-        color: var(--Grayish-Blue);
-        font-weight: 700;
-    }
+    
 }
 .attribution {
     color: var(--Grayish-Blue);
     position: absolute;
-    bottom: 2px;
+    bottom: 4px;
     text-align: center;
 
     & a {
@@ -148,3 +159,53 @@ body {
         text-decoration: none;
     }
 }
+
+/* Desktop Designe */
+
+@media (min-width: 900px) {
+    body {
+        width: 100%;
+        height: 100vh;
+        background: url(./images/bg-desktop.png);
+        background-position-y: bottom;
+        background-repeat: repeat-x;
+        background-color: var(--Very-Dark-Blue);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+   .main-container {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-end;
+   }
+   .item1 {
+        width: 25%;
+        margin-right: 32px;
+        margin-bottom: 0;
+   }
+   .item2 {
+        width: 50%;
+        padding: 36px;
+    align-items: flex-start;
+    }
+   .indicator-container {
+        top: -40px;
+        bottom: inherit;
+        right: 40px;
+
+        & .item3 {
+            border-radius: 5px 5px 0 5px;
+        }
+        & .triang-item {
+            width: 0;
+            height: 0;
+            border-right: 20px solid white;
+            border-top: 0 solid transparent;
+            border-bottom: 20px solid transparent; 
+        }
+   }
+}   
