--- a/style.css
+++ b/style.css
@@ -188,14 +188,16 @@ body {
         align-items: flex-end;
    }
    .item1 {
-        width: 25%;
+        width: 26%;
+        padding: 48px;
         margin-right: 32px;
         margin-bottom: 0;
    }
    .item2 {
-        width: 50%;
-        padding: 36px;
-    align-items: flex-start;
+        width: 40%;
+        padding: 48px 42px 24px 42px;
+        align-items: flex-start;
+        box-sizing: unset;
     }
    .indicator-container {
         top: -40px;
